fix(子控): 订单品种列表查询优化